Add server requirements

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,4 +1,4 @@
-# Server config for gtn.neoformit.com
+# Server config for usegalaxy-au.neoformit.com (Galaxy content site)
 
 server {
     # redirect www to non-www
@@ -19,13 +19,21 @@ server {
         return 444;
     }
 
+    location = /biconcave {
+        return  404;
+    }
+
+    location /static {
+        root /srv/sites/ga-site/webapp/webapp
+    }
+
     location  / {
-        proxy_pass            http://127.0.0.1:5000;
+        proxy_pass            http://unix:/run/ga-site.sock;
         proxy_redirect        off;
         proxy_set_header      Host                 $host;
         proxy_set_header      X-Real-IP            $remote_addr;
         proxy_set_header      X-Forwarded-For      $proxy_add_x_forwarded_for;
-        proxy_set_header      X-NginX-Proxy        true;
+        proxy_read_timeout    600;  # seconds
         client_max_body_size  1000m;
     }
 
