Add server conf

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -24,7 +24,7 @@ server {
     }
 
     location /static {
-        root /srv/sites/ga-site/webapp/webapp
+        root /srv/sites/ga-site/webapp/webapp;
     }
 
     location  / {
