--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ django==3.2
 django-markdownify==0.9.0
 django-timezone-field==4.2.1
 python-dotenv==0.19.1
-pillow
+Pillow==7.0.0
+psycopg2-binary==2.9.1
 gunicorn
-psycopg2-binary
