Add media to nginx conf

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -27,6 +27,10 @@ server {
         root /srv/sites/ga-site/webapp/webapp;
     }
 
+    location /media {
+        root /srv/sites/ga-site/webapp/webapp;
+    }
+
     location  / {
         proxy_pass            http://unix:/run/ga-site.sock;
         proxy_redirect        off;
