Add favicon location to nginx conf

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -23,6 +23,10 @@ server {
         return  404;
     }
 
+    location = /favicon.ico {
+        alias  /srv/sites/ga-site/webapp/webapp/static/favicon/favicon.ico;
+    }
+
     location /static {
         root /srv/sites/ga-site/webapp/webapp;
     }
