--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -8,8 +8,6 @@ server {
 
 
 server {
-
-    listen 80;
     server_name  usegalaxy-au.neoformit.com;
     access_log   /var/log/nginx/usegalaxy-au.access.log;
     error_log    /var/log/nginx/usegalaxy-au.error.log;
@@ -41,8 +39,32 @@ server {
         proxy_set_header      Host                 $host;
         proxy_set_header      X-Real-IP            $remote_addr;
         proxy_set_header      X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_hide_header     X-Frame-Options;
         proxy_read_timeout    600;  # seconds
         client_max_body_size  1000m;
     }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/usegalaxy-au.neoformit.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/usegalaxy-au.neoformit.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+
+
+server {
+    if ($host = usegalaxy-au.neoformit.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+
+    listen 80;
+    server_name  usegalaxy-au.neoformit.com;
+    return 404; # managed by Certbot
+
 
 }
