--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-DJANGO_SECRET_KEY=secret
+DJANGO_SECRET_KEY="secret"
 HOSTNAME=mysite.com
 DB_NAME=webapp
 DB_USER=webapp
-DB_PASSWORD=secret
+DB_PASSWORD="secret"
