--- a/deploy/ansible/roles/webapp/tasks/main.yml
+++ b/deploy/ansible/roles/webapp/tasks/main.yml
@@ -1,17 +1,75 @@
 ---
 
-# https://www.tutorialworks.com/ansible-template-loop/
+- name: check for local.env file
+  delegate_to: localhost
+  stat:
+    path: .env
+  register: local_env
+
+- name: fail if .env does not exist
+  fail: msg="Please create .env file - for reference see .env.sample in project root."
+  when: not local_env.stat.exists
+
+- name: create server directory
+  file:
+    path: "{{ server_root }}"
+    state: directory
+
 - name: template webserver configuration
   template:
-    src: '{{ item.src }}'
-    dest: '{{ item.dest }}'
-  loop: {{ webapp.templates }}
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  loop: "{{ webapp.templates }}"
 
 - name: copy webserver configuration
   copy:
-    src: '{{ item.src }}'
-    dest: '{{ item.dest }}'
-    loop: {{ webapp.files }}
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  loop: "{{ webapp.files }}"
+
+- name: install systems dependencies
+  ansible.builtin.package:
+    name:
+      - python3.8
+      - python3-pip
+
+- name: clone git repository for galaxy-content-site
+  ansible.builtin.git:
+    repo: https://github.com/neoformit/galaxy-content-site.git
+    dest: "{{ project_root }}"
+    clone: yes
+
+- name: copy webapp .env file
+  copy:
+    src: ".env"
+    dest: "{{ project_root }}/.env"
+
+- name: link webapp to /srv/sites
+  ansible.builtin.file:
+    src: "{{ project_root }}/webapp"
+    dest: "{{ web_root }}"
+    state: link
+
+- name: link to enable nginx virtualhost
+  ansible.builtin.file:
+    src: "/etc/nginx/sites-available/{{ inventory_hostname }}.conf"
+    dest: "/etc/nginx/sites-enabled/{{ inventory_hostname }}"
+    state: link
+
+- name: Install Python requirements into venv
+  pip:
+    requirements: "{{ project_root }}/requirements.txt"
+    virtualenv: "{{ venv_root }}"
+    virtualenv_command: virtualenv-3.8
 
 - name: run webapp setup script
-  script: {{ server_root }}/setup.sh
+  command: "bash {{ server_root }}/setup.sh"
+
+- name: Ensure webapp superuser login
+  command: |
+    export DJANGO_SUPERUSER_PASSWORD={{ webapp.admin_user.password }} &&
+    python manage.py createsuperuser --noinput \
+      --email {{ webapp.admin_user.email }} \
+      --first_name {{ webapp.admin_user.first_name }} \
+      --last_name {{ webapp.admin_user.last_name }}
+  ignore_errors: yes
