--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -1,22 +1,11 @@
-- hosts: hosts
+---
+- hosts: webserver
+  remote_user: ubuntu
   become: true
+  vars_files:
+    - group_vars/secrets.yml
   roles:
-    - { role: geerlingguy.nginx }
-    - { role: geerlingguy.certbot }
+    - geerlingguy.nginx
     - role: geerlingguy.postgresql
       become: true
-#    - webapp  # Nearly ready
-
-
-postgresql_databases:
-  - name: webapp # required; the rest are optional
-    login_password: secret
-    login_user: webapp
-    port: 5432
-
-postgresql_users:
-  - name: webapp
-    password: secret
-    db: webapp
-    login_password: secret
-    login_user: webapp
+    - webapp
