--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,10 @@
+# A secret key to encrypt sensitive content. Alphanumeric string.
 DJANGO_SECRET_KEY="secret"
+
+# Your site's hostname. Do not include slashes or schema.
 HOSTNAME=mysite.com
+
+# Postgres database credentials
 DB_NAME=webapp
 DB_USER=webapp
 DB_PASSWORD="secret"
