--- a/deploy/ansible/group_vars/webserver.yml.sample
+++ b/deploy/ansible/group_vars/webserver.yml.sample
@@ -7,9 +7,12 @@
 # django_secret_key: <str>
 # smtp_password: <str>
 
+# The domain name that you've registered for the target webserver
+domain_name: "{{ inventory_hostname }}"
+
 # If you don't want SSL certs, just flip this:
 certbot_ssl: true
-certbot_renew_email: c.hyde@qcif.edu.au
+certbot_renew_email: me@example.com
 
 # 4 web workers should be plenty - increase for machines with >4 CPUs
 gunicorn:
@@ -28,7 +31,7 @@ postgresql_databases:
 
 postgresql_users:
   - name: "{{ postgres_db_user }}"
-    password: "{{ postgres_db_password }}"
+    password: "{{ database_password }}"
     db: "{{ postgres_db_name }}"
 
 postgres_users_no_log: false
@@ -36,10 +39,10 @@ postgres_users_no_log: false
 # GMS Webapp configuration
 # -----------------------------------------------------------------------------
 
-# Will git clone galaxy-content-site to here
+# Git clone galaxy-content-site here
 project_root: /home/ubuntu/galaxy-content-site
 
-# This is where service files will be created
+# This is where server conf files (nginx/gunicorn) will be created
 server_root: /home/ubuntu/serve
 
 # App will be served from here
