--- a/deploy/ansible/roles/webapp/tasks/main.yml
+++ b/deploy/ansible/roles/webapp/tasks/main.yml
@@ -1,31 +1,9 @@
 ---
 
-- name: check for local.env file
-  delegate_to: localhost
-  stat:
-    path: .env
-  register: local_env
-
-- name: fail if .env does not exist
-  fail: msg="Please create .env file - for reference see .env.sample in project root."
-  when: not local_env.stat.exists
-
 - name: create server directory
   file:
     path: "{{ server_root }}"
     state: directory
-
-- name: template webserver configuration
-  template:
-    src: "{{ item.src }}"
-    dest: "{{ item.dest }}"
-  loop: "{{ webapp.templates }}"
-
-- name: copy webserver configuration
-  copy:
-    src: "{{ item.src }}"
-    dest: "{{ item.dest }}"
-  loop: "{{ webapp.files }}"
 
 - name: install systems dependencies
   ansible.builtin.package:
@@ -41,22 +19,49 @@
     dest: "{{ project_root }}"
     clone: yes
 
-- name: update media file permissions
-  shell: "chown -R www-data:www-data {{ web_root }}/webapp/media"
-
-- name: update log file permissions
-  shell: "chown -R www-data:www-data {{ web_root }}/webapp/logs"
-
 - name: link webapp to /srv/sites
   ansible.builtin.file:
     src: "{{ project_root }}/webapp"
     dest: "{{ web_root }}"
     state: link
 
-- name: copy webapp .env file
+- name: create webapp media directory
+  file:
+    path: "{{ web_root }}/webapp/media"
+    state: directory
+
+- name: create webapp logs directory
+  file:
+    path: "{{ web_root }}/webapp/logs"
+    state: directory
+
+- name: update media file permissions
+  ansible.builtin.file:
+    path: "{{ web_root }}/webapp/media"
+    state: directory
+    recurse: yes
+    owner: www-data
+    group: www-data
+
+- name: update log file permissions
+  ansible.builtin.file:
+    path: "{{ web_root }}/webapp/logs"
+    state: directory
+    recurse: yes
+    owner: www-data
+    group: www-data
+
+- name: template webserver configuration
+  template:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  loop: "{{ webapp.templates }}"
+
+- name: copy webserver configuration
   copy:
-    src: ".env"
-    dest: "{{ project_root }}/.env"
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  loop: "{{ webapp.files }}"
 
 - name: link to enable nginx virtualhost
   ansible.builtin.file:
@@ -64,14 +69,32 @@
     dest: "/etc/nginx/sites-enabled/{{ inventory_hostname }}"
     state: link
 
+- name: Install Python virtualenv
+  pip:
+    name: virtualenv
+    executable: pip3
+
 - name: Install Python requirements into venv
   pip:
     requirements: "{{ project_root }}/requirements.txt"
     virtualenv: "{{ venv_root }}"
-    virtualenv_command: virtualenv-3.8
+    virtualenv_python: python3.8
 
 - name: run webapp setup script
   command: "bash {{ server_root }}/setup.sh"
+
+- name: register SSL cert state
+  stat:
+    path: "/etc/letsencrypt/live/{{ inventory_hostname }}"
+  register: ssl_cert_path
+
+- name: create and install SSL certificate with letsencrypt
+  command: "certbot --nginx --noninteractive --agree-tos --redirect --email {{ certbot_renew_email }} -d {{ inventory_hostname }}"
+  when: certbot_ssl and not ssl_cert_path.stat.exists
+
+- name: renew SSL certificates with letsencrypt
+  command: "certbot certonly --nginx --noninteractive --agree-tos -d {{ inventory_hostname }}"
+  when: certbot_ssl and ssl_cert_path.stat.exists
 
 - name: Ensure webapp superuser login
   shell: |
@@ -82,7 +105,3 @@
       --first_name {{ admin_user.first_name }} \
       --last_name {{ admin_user.last_name }}
   ignore_errors: yes
-
-- name: create and install SSL certificate with letsencrypt
-  command: "certbot --nginx --noninteractive --agree-tos --redirect --email {{ certbot_renew_email }} -d {{ domain_name }}"
-  when: certbot_ssl
