--- a/.env.sample
+++ b/.env.sample
@@ -9,10 +9,11 @@ DB_NAME=webapp
 DB_USER=webapp
 DB_PASSWORD="secret"
 
-MAIL_HOSTNAME=mail.usegalaxy.org.au
+# Credentials for your SMTP mail server
+MAIL_HOSTNAME=mail.mysite.com
 MAIL_SMTP_PORT=25
 MAIL_SMTP_USERNAME=admin
 MAIL_SMTP_PASSWORD=secret
-MAIL_FROM_ADDRESS=noreply@usegalaxy.org.au
-MAIL_TO_ADDRESS=helpdesk@usegalaxy.org.au
-MAIL_USE_TLS=True
+MAIL_FROM_ADDRESS=noreply@mysite.com
+MAIL_TO_ADDRESS=helpdesk@mysite.com
+MAIL_USE_TLS=true
