--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django==3.2
 django-timezone-field==4.2.1
 django-crispy-forms==1.14.0
+django-light
 psycopg2-binary==2.9.1
 gunicorn==20.1.0
 markdown2==2.4.1
