Parameterize recaptcha and slack API variables

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,8 @@ MAIL_SMTP_PASSWORD=secret
 MAIL_FROM_ADDRESS=noreply@mysite.com
 MAIL_TO_ADDRESS=helpdesk@mysite.com
 MAIL_USE_TLS=true
+
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+
+SLACK_API_URL=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
