--- a/deploy/ansible/roles/webapp/tasks/main.yml
+++ b/deploy/ansible/roles/webapp/tasks/main.yml
@@ -35,22 +35,6 @@
     path: "{{ web_root }}/webapp/logs"
     state: directory
 
-- name: update media file permissions
-  ansible.builtin.file:
-    path: "{{ web_root }}/webapp/media"
-    state: directory
-    recurse: yes
-    owner: www-data
-    group: www-data
-
-- name: update log file permissions
-  ansible.builtin.file:
-    path: "{{ web_root }}/webapp/logs"
-    state: directory
-    recurse: yes
-    owner: www-data
-    group: www-data
-
 - name: template webserver configuration
   template:
     src: "{{ item.src }}"
@@ -105,3 +89,30 @@
       --first_name {{ admin_user.first_name }} \
       --last_name {{ admin_user.last_name }}
   ignore_errors: yes
+
+- name: update project ownership
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}"
+    state: directory
+    recurse: yes
+    owner: ubuntu
+    group: ubuntu
+
+- name: update media file ownership
+  ansible.builtin.file:
+    path: "{{ web_root }}/webapp/media"
+    state: directory
+    recurse: yes
+    owner: www-data
+    group: www-data
+
+- name: update log file ownership
+  ansible.builtin.file:
+    path: "{{ web_root }}/webapp/logs"
+    state: directory
+    recurse: yes
+    owner: www-data
+    group: www-data
+
+- name: make update.sh executable
+  file: dest=/home/ubuntu/update.sh mode=a+x
