--- a/.env.sample
+++ b/.env.sample
@@ -22,3 +22,6 @@ RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 
 SLACK_API_URL=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
+SLACK_API_KEY=xoxb-XXXXX
+SLACK_CHANNEL_ID=XXXXXXXXX
+SLACK_MENTION_USER_ID=UXXXXXXXXX
