Update ansible to allow database migration to be skipped

--- a/deploy/ansible/group_vars/webservers.yml
+++ b/deploy/ansible/group_vars/webservers.yml
@@ -63,6 +63,8 @@ smtp:
   to_address: help@genome.edu.au
   use_tls: true
 
+skip_database_migration: true
+
 # For error notifications
 slack:
   errors:
