Ansible fix media/log files ownership to allow ubuntu write

--- a/deploy/ansible/roles/webapp/tasks/main.yml
+++ b/deploy/ansible/roles/webapp/tasks/main.yml
@@ -104,7 +104,7 @@
     path: "{{ web_root }}/webapp/media"
     state: directory
     recurse: yes
-    owner: www-data
+    owner: ubuntu
     group: www-data
 
 - name: update log file ownership
@@ -112,7 +112,7 @@
     path: "{{ web_root }}/webapp/logs"
     state: directory
     recurse: yes
-    owner: www-data
+    owner: ubuntu
     group: www-data
 
 - name: make update.sh executable
