Fix ansible for skipping migrations

--- a/deploy/ansible/group_vars/webservers.yml
+++ b/deploy/ansible/group_vars/webservers.yml
@@ -63,7 +63,7 @@ smtp:
   to_address: help@genome.edu.au
   use_tls: true
 
-skip_database_migration: true
+# skip_database_migration: true
 
 # For error notifications
 slack:
