--- a/deploy/ansible/roles/webapp/tasks/main.yml
+++ b/deploy/ansible/roles/webapp/tasks/main.yml
@@ -96,25 +96,17 @@
     path: "{{ web_root }}/webapp/media"
     state: directory
     recurse: yes
-    owner: ubuntu
-    group: www-data
+    mode: 0666
 
 - name: update log file ownership
   ansible.builtin.file:
     path: "{{ web_root }}/webapp/logs"
     state: directory
     recurse: yes
-    owner: ubuntu
-    group: www-data
+    mode: 0666
 
 - name: make update.sh executable
   file: dest=/home/ubuntu/update.sh mode=a+x
-
-- name: remove redundant update.sh from git repo
-  ansible.builtin.file:
-    path: "{{ project_root }}/update.sh"
-    state: absent
-  ignore_errors: yes
 
 - name: check whether news scraper in GMS version
   ansible.builtin.shell: "{{ venv_root }}/bin/python manage.py scrape_news --help"
