Refactor ansible var smtp_password for clarity

--- a/deploy/ansible/group_vars/webservers.yml
+++ b/deploy/ansible/group_vars/webservers.yml
@@ -59,6 +59,7 @@ smtp:
   hostname: smtp.office365.com
   port: 587
   username: qfab_smtp@qfab.org
+  password: "{{ smtp_password }}"
   from_address: qfab_smtp@qfab.org
   to_address: help@genome.edu.au
   use_tls: true
