--- a/.env.sample
+++ b/.env.sample
@@ -26,3 +26,7 @@ SLACK_API_URL=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
 SLACK_API_KEY=xoxb-XXXXX
 SLACK_CHANNEL_ID=XXXXXXXXX
 SLACK_MENTION_USER_ID=UXXXXXXXXX
+
+# Admin API access (optional)
+GALAXY_URL=
+GALAXY_API_KEY=
