--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 django==4.0.3
 django-timezone-field==4.2.1
 django-crispy-forms==1.14.0
-django-light
+django_light
 psycopg2-binary==2.9.1
 gunicorn==20.1.0
 markdown2==2.4.1
 python-dotenv==0.19.1
-Pillow==7.0.0
+Pillow
 django-recaptcha
 beautifulsoup4
 locust
