Update slack descriptions in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -22,10 +22,13 @@ MAIL_SMTP_PASSWORD=secret
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 
-SLACK_API_URL=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
+# For error alerts
 SLACK_API_KEY=xoxb-XXXXX
 SLACK_CHANNEL_ID=XXXXXXXXX
 SLACK_MENTION_USER_ID=UXXXXXXXXX
+
+# For tool update notifications:
+SLACK_API_URL=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
 
 # Admin API access (optional)
 GALAXY_URL=
