--- a/deploy/maintenance-site/nginx.conf
+++ b/deploy/maintenance-site/nginx.conf
@@ -2,22 +2,21 @@ server {
 
     listen 80;
 
-    server_name  site.usegalaxy.org.au;
+    server_name  site.usegalaxy.org.au maintenance-site.usegalaxy.org.au;
     access_log   /var/log/nginx/gms-maintenance.access.log;
     error_log    /var/log/nginx/gms-maintenance.error.log;
 
-    root /srv/sites/gms-maintenance;
-    #error_page 404 /;
-    #error_page 404 =302 /index.html;
+    root /srv/sites/gms-maintenance-site; # Symlink this
 
-    location /img/ {}
+    location /static/ {
+      alias /srv/sites/gms-maintenance-site/static/;
+    }
 
     location = / {
       try_files /index.html = 404;
     }
 
     location / {
-      #try_files $uri $uri/ /index.html;
       return 302 $scheme://$host;
     }
 
