Update maintenance nginx conf

--- a/deploy/maintenance-site/nginx.conf
+++ b/deploy/maintenance-site/nginx.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name  site.usegalaxy.org.au maintenance-site.usegalaxy.org.au;
+    server_name  site.usegalaxy.org.au site-maintenance.usegalaxy.org.au;
     access_log   /var/log/nginx/gms-maintenance.access.log;
     error_log    /var/log/nginx/gms-maintenance.error.log;
 
