--- a/.env.sample
+++ b/.env.sample
@@ -27,8 +27,9 @@ SLACK_API_KEY=xoxb-XXXXX
 SLACK_CHANNEL_ID=XXXXXXXXX
 SLACK_MENTION_USER_ID=UXXXXXXXXX
 
-# For tool update notifications:
-SLACK_API_URL=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
+# For tool update notifications (comma separated):
+SLACK_API_URLS=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
+TOOL_UPDATE_EMAILS=test-notification@example.com,test-notification-2@example.com
 
 # Admin API access (optional)
 GALAXY_URL=
