--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# A secret key to encrypt sensitive content. Alphanumeric string.
+# A secret key to encrypt sensitive content - alphanumeric string
 DJANGO_SECRET_KEY="secret"
 
 # Your site's hostname. Do not include slashes or schema.
