Read MOCK_GALAXY_INTERACTIONS from env

--- a/.env.sample
+++ b/.env.sample
@@ -34,3 +34,4 @@ TOOL_UPDATE_EMAILS=test-notification@example.com,test-notification-2@example.com
 # Admin API access (optional)
 GALAXY_URL=
 GALAXY_API_KEY=
+#MOCK_GALAXY_INTERACTIONS=true  # Uncomment to mock Galaxy interactions
