Update bulk_email.py documentation

--- a/scripts/mail/unsubscribed/emails.txt.sample
+++ b/scripts/mail/unsubscribed/emails.txt.sample
@@ -1,2 +1,2 @@
-# Manually added emails to be unsubscribed
+# Users that have unsubscribed, added by GMS from 'unsubscribe' clicks
 user@example.com
