Run github tests workflow on branch 'dev'

--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -2,9 +2,9 @@ name: Django tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
 
 env:
   DJANGO_SECRET_KEY: secret
