--- a/.env.sample
+++ b/.env.sample
@@ -33,7 +33,9 @@ SLACK_MENTION_USER_ID=UXXXXXXXXX
 SLACK_API_URLS=https://hooks.slack.com/services/<XXXXX>/<XXXXX>/<XXXXX>
 TOOL_UPDATE_EMAILS=test-notification@example.com,test-notification-2@example.com
 
-# Admin API access (optional)
+# For linking to Galaxy server:
 GALAXY_URL=
+
+# Admin API access (optional)
 GALAXY_API_KEY=
 #MOCK_GALAXY_INTERACTIONS=true  # Uncomment to mock Galaxy interactions
