Add sections.yml for export lab page

--- a/webapp/home/test/data/subsite/media/main.yml
+++ b/webapp/home/test/data/subsite/media/main.yml
@@ -14,3 +14,4 @@ intro_html: "subsite_intro.html"
 header_logo: "my-logo.png"
 footer_html: "footer.html"
 custom_css: "custom.css"
+sections: sections.yml
