Update ansible vars

--- a/deploy/ansible/ansible.cfg
+++ b/deploy/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 stdout_callback=debug
 stderr_callback=debug
-vault_password_file=~/.ansible.vault.pass
+vault_password_file=.vault.pass
