--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,20 @@
 django==4.0.3
 django-timezone-field==4.2.1
 django-crispy-forms==1.14.0
-django_light
+django-recaptcha==4.*
+bioblend==1.0
+pandas==2.1
+pyyaml==6.0
+pydantic==2.6
 psycopg2-binary==2.9.1
 gunicorn==20.1.0
 markdown2==2.4.1
 python-dotenv==0.19.1
-Pillow
-django-recaptcha==4.*
 beautifulsoup4
-locust
-bioblend
-lxml
-requests
-django-debug-toolbar
 django-cleanup
-pandas
-pyyaml
+django-debug-toolbar
+django_light
+locust
+lxml
+Pillow
+requests
