--- a/webapp/home/static/home/subsite/docs/assembly.yml
+++ b/webapp/home/static/home/subsite/docs/assembly.yml
@@ -5,13 +5,13 @@ tabs:
     title: Tools
     heading_html: Common tools are listed here, or search for more in the full tool panel to the left.
     content:
-      - button_link: $GALAXY_URL/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fhifiasm%2Fhifiasm
+      - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fhifiasm%2Fhifiasm"
         description_html: <p>A haplotype-resolved assembler for PacBio HiFi reads.</p>
         inputs:
         - datatypes:
           - fasta
         title_html: <code>Hifiasm</code>- assembly with PacBio HiFi data
-      - button_link: $GALAXY_URL/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fflye%2Fflye
+      - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fflye%2Fflye"
         description_html: |
           <p>
             <em>de novo</em>
@@ -48,7 +48,7 @@ tabs:
                   using multiple workflows.
                 </p>
               title_html: About these workflows
-            - button_link: $GALAXY_URL/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=220
+            - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=220"
               button_tip: Import to Galaxy Australia
               description_html: |
                 <p>
@@ -73,7 +73,7 @@ tabs:
                   describes the steps required to assemble a genome on Galaxy with Nanopore and Illumina data
                 </p>
               title_html: About these workflows
-            - button_link: $GALAXY_URL/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=225
+            - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=225"
               button_tip: Import to Galaxy Australia
               description_html: |
                 <p>
