Fix hard coded HOSTNAME

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@
 DJANGO_SECRET_KEY="secret"
 
 # Your site's hostname. Do not include slashes or schema.
-HOSTNAME=gms.mysite.com
+HOSTNAME=localhost:8000
 # For sharing cookies with root domain
 CSRF_COOKIE_DOMAIN=.mysite.com
 
