Read custom admin email subject prefix from .env

--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,8 @@ MAIL_HOSTNAME=mail.mysite.com
 MAIL_SMTP_USERNAME=admin
 MAIL_SMTP_PASSWORD=secret
 
+EMAIL_SUBJECT_PREFIX="GMS: "
+
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 
