--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # python==3.9
-django==4.0.3
-django-timezone-field==4.2.1
-django-crispy-forms==1.14.0
+django==4.*
+django-timezone-field==4.*
+django-crispy-forms==1.*
 django-recaptcha==4.*
-bioblend==1.0
-pandas==2.1
-pyyaml==6.0
-pydantic==2.6
-psycopg2-binary==2.9.1
-gunicorn==20.1.0
-markdown2==2.4.1
-python-dotenv==0.19.1
+bioblend==1.*
+pandas==2.*
+pyyaml==6.*
+pydantic==2.*
+psycopg2-binary==2.*
+gunicorn==20.*
+markdown2==2.*
+python-dotenv==0.*
 beautifulsoup4
 django-cleanup
 django-debug-toolbar
