--- a/deploy/ansible/roles/webapp/tasks/main.yml
+++ b/deploy/ansible/roles/webapp/tasks/main.yml
@@ -5,12 +5,23 @@
     path: "{{ server_root }}"
     state: directory
 
+- name: Add the deadsnakes PPA repository
+  apt_repository:
+    repo: ppa:deadsnakes/ppa
+    state: present
+
+- name: update apt cache
+  ansible.builtin.apt:
+    update_cache: yes
+
 - name: install systems dependencies
   ansible.builtin.package:
     name:
-      - python3.8
-      - python3-pip
-      - certbot
+      - gcc
+      - python3.12
+      - python3.12-pip
+      - python3.12-venv
+      - python3.12-dev
       - python3-certbot-nginx
 
 - name: clone git repository for galaxy-content-site
@@ -54,16 +65,11 @@
     dest: "/etc/nginx/sites-enabled/{{ inventory_hostname }}"
     state: link
 
-- name: Install Python virtualenv
-  pip:
-    name: virtualenv
-    executable: pip3
-
 - name: Install Python requirements into venv
   pip:
     requirements: "{{ project_root }}/requirements.txt"
     virtualenv: "{{ venv_root }}"
-    virtualenv_python: python3.8
+    virtualenv_python: python3.12
 
 - name: run webapp setup script
   command: "bash {{ server_root }}/setup.sh"
