--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ webapp/webapp/static/
 fetch_taxonomies/outputs/
 scripts/mail/unsubscribed/*.txt
 scripts/mail/*.csv
-
+venv*
 # Deploy conf
 .vault.pass
 
