Pin psycopg2-binary

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# python==3.9
+# python==3.12
 django==4.*
 django-timezone-field==4.*
 django-crispy-forms==1.*
@@ -7,7 +7,7 @@ bioblend==1.*
 pandas==2.*
 pyyaml==6.*
 pydantic==2.*
-psycopg2-binary==2.*
+psycopg2-binary>=2.9.9,<3.0
 gunicorn==20.*
 markdown2==2.*
 python-dotenv==0.*
