--- a/webapp/home/labs/docs/main.yml
+++ b/webapp/home/labs/docs/main.yml
@@ -9,6 +9,8 @@ galaxy_base_url: https://galaxy-antarctica.org
 subdomain: antarctica
 root_domain: galaxy-antarctica.org
 
+# These files need to be accessible on the internet, relative to the content_root URL!
+# -----------------------------------------------------------------------------
 # Custom content relative to this file URL
 intro_html: templates/intro.html
 header_logo: static/flask.svg
