--- a/webapp/home/labs/docs/section_1.yml
+++ b/webapp/home/labs/docs/section_1.yml
@@ -1,42 +1,48 @@
 id: section_1
-title: Example section 1
+title: Example section
 tabs:
   - id: tools
     title: Tools
     heading_html: Common tools are listed here, or search for more in the full tool panel to the left.
     content:
+
       # Accordion item schema:
-      #   title_html: <str>  # inline HTML accepted e.g. <i> <b>
+      #   title_html: <str>  # inline HTML accepted e.g. <i> <b> <code>
       #   description_html: <str>
-      #   inputs:
+      #   inputs: <optional>
       #     - datatypes:  # tool input 1 - two accepted datatypes
       #       - <str>
       #       - <str>
-      #       label: <str>
+      #       label: <str optional>
       #     - datatypes:  # tool input 2 - one accepted datatype
       #       - <str>
-      #       label: <str>
-      #   button_link: <str>
-      #   button_html: <str>
-      #   button_tip: <str>
-      #   view_link: <str>
-      #   view_html: <str>
-      #   view_tip: <str>
+      #       label: <str optional>
+      #   button_link: <str optional>
+      #   button_html: <str optional>
+      #   button_tip: <str optional>
+      #   view_link: <str optional>
+      #   view_html: <str optional>
+      #   view_tip: <str optional>
+
       - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=upload1"
         title_html: Import data to Galaxy
         description_html: <p>Standard upload of data to Galaxy, from your computer or
           from the web.</p>
       - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fdevteam%2Ffastqc%2Ffastqc"
         title_html: <code>FastQC</code>- sequence quality reports
-        description_html: <p>Before using your sequencing data, it&apos;s important
-          first ensure that the data quality is sufficient for your analysis.</p>
+        description_html: >
+          <p>
+            Before using your sequencing data, it's important to ensure that
+            the data quality is sufficient for your analysis.
+          </p>
         inputs:
-          - datatypes:
-            - fastq
-          - datatypes:
-            - bam
-          - datatypes:
-            - sam
+          - label: Sequencing data for analysis
+            datatypes:
+              - fasta
+              - fastq
+              - bam
+              - sam
+
   - id: workflows
     title: Workflows
     heading_html: |
@@ -74,6 +80,7 @@ tabs:
         title_html: Kmer counting to estimate genome size
         view_link: https://workflowhub.eu/workflows/223
         view_tip: View in WorkflowHub
+
   - id: help
     title: Help
     content:
