--- a/webapp/home/labs/docs/section_2.yml
+++ b/webapp/home/labs/docs/section_2.yml
@@ -1,49 +1,69 @@
 id: section_2
-title: Example section 2
+title: Example section  with subsections
 tabs:
   - id: tools
     title: Tools
-    heading_html: Common tools are listed here, or search for more in the full tool panel to the left.
+    heading_html: |
+      The tools in this section have been divided into subsections to make it
+      easier for users to find the tools they need. This must replace the
+      entire value of the <code>content</code> key i.e. you can't mix
+      subsections with standalone items.
     content:
-      # Accordion item schema:
-      #   title_html: <str>  # inline HTML accepted e.g. <i> <b>
-      #   description_html: <str>
-      #   inputs:
-      #     - datatypes:  # tool input 1 - two accepted datatypes
-      #       - <str>
-      #       - <str>
-      #       label: <str>
-      #     - datatypes:  # tool input 2 - one accepted datatype
-      #       - <str>
-      #       label: <str>
-      #   button_link: <str>
-      #   button_html: <str>
-      #   button_tip: <str>
-      #   view_link: <str>
-      #   view_html: <str>
-      #   view_tip: <str>
-      - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fhifiasm%2Fhifiasm"
-        description_html: <p>A haplotype-resolved assembler for PacBio HiFi reads.</p>
-        inputs:
-        - datatypes:
-          - fasta
-        title_html: <code>Hifiasm</code>- assembly with PacBio HiFi data
-      - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fflye%2Fflye"
-        description_html: |
-          <p>
-            <em>de novo</em>
-            assembly of single-molecule sequencing reads, designed for a wide range of datasets,
-            from small bacterial projects to large mammalian-scale assemblies.
-          </p>
-        inputs:
-        - datatypes:
-          - fasta
-        - datatypes:
-          - fastq
-        title_html: <code>Flye</code>- assembly with PacBio or Nanopore data
+
+      # Content can be split into subsections, each with a title.
+      # This must replace the entire value of the `content` key i.e. you can't
+      # mix subsections with standalone items:
+      subsections:
+        - id: subsection_1
+          title: This is my first subsection
+          content:
+
+            # Accordion item schema:
+            #   title_html: <str>  # inline HTML accepted e.g. <i> <b> <code>
+            #   description_html: <str>
+            #   inputs: <optional>
+            #     - datatypes:  # tool input 1 - two accepted datatypes
+            #       - <str>
+            #       - <str>
+            #       label: <str optional>
+            #     - datatypes:  # tool input 2 - one accepted datatype
+            #       - <str>
+            #       label: <str optional>
+            #   button_link: <str optional>
+            #   button_html: <str optional>
+            #   button_tip: <str optional>
+            #   view_link: <str optional>
+            #   view_html: <str optional>
+            #   view_tip: <str optional>
+
+          - title_html: <code>Hifiasm</code>- assembly with PacBio HiFi data
+            button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fhifiasm%2Fhifiasm"
+            description_html: <p>A haplotype-resolved assembler for PacBio HiFi reads.</p>
+            inputs:
+              - label: PacBio reads
+                datatypes:
+                  - fasta
+                  - fastq
+
+        - id: subsection_2
+          title: Another subsection
+          content:
+            - title_html: <code>Flye</code>- assembly with PacBio or Nanopore data
+              button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fbgruening%2Fflye%2Fflye"
+              description_html: >
+                <p>
+                  <em>de novo</em>
+                  assembly of single-molecule sequencing reads, designed for a wide range of datasets,
+                  from small bacterial projects to large mammalian-scale assemblies.
+                </p>
+              inputs:
+              - label: Single-molecule sequencing reads
+                  - fasta
+                  - fastq
+
   - id: workflows
     title: Workflows
-    heading_html: |
+    heading_html: >
       A workflow is a series of Galaxy tools that have been linked together
       to perform a specific analysis. You can use and customize the example workflows
       below.
@@ -55,7 +75,7 @@ tabs:
         - id: pacbio
           title: Assembly with PacBio HiFi data
           content:
-            - description_html: |
+            - description_html: >
                 <p>
                   This
                   <a href="https://australianbiocommons.github.io/how-to-guides/genome_assembly/hifi_assembly" target="_blank">
@@ -67,7 +87,7 @@ tabs:
               title_html: About these workflows
             - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=220"
               button_tip: Import to Galaxy Australia
-              description_html: |
+              description_html: >
                 <p>
                   Convert a BAM file to FASTQ format to perform QC analysis (required if your data is in BAM format).
                 </p>
@@ -81,7 +101,7 @@ tabs:
         - id: nanopore
           title: Assembly with Nanopore data and polishing with Illumina data
           content:
-            - description_html: |
+            - description_html: >
                 <p>
                   This
                   <a href="https://training.galaxyproject.org/training-material/topics/assembly/tutorials/largegenome/tutorial.html" target="_blank">
@@ -92,7 +112,7 @@ tabs:
               title_html: About these workflows
             - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=225"
               button_tip: Import to Galaxy Australia
-              description_html: |
+              description_html: >
                 <p>
                   Assemble Nanopore long reads. This workflow can be run alone or as part of a combined workflow for large genome assembly.
                 </p>
@@ -103,12 +123,13 @@ tabs:
               title_html: Flye assembly with Nanopore data
               view_link: https://workflowhub.eu/workflows/225
               view_tip: View in WorkflowHub
+
   - id: help
     title: Help
     content:
       - button_html: Request support
         button_link: /request
-        description_html: |
+        description_html: >
           <p>
             Yes. Galaxy Australia has assembly tools for small prokaryote genomes as well as larger eukaryote genomes.
             We are continually adding new tools and optimising them for large genome assemblies
@@ -124,7 +145,7 @@ tabs:
             <li>a tool appears to be broken or running slowly</li>
           </ul>
         title_html: Can I use Galaxy Australia to assemble a large genome?
-      - description_html: |
+      - description_html: >
           <ul>
             <li>See the tutorials in this Help section. They cover different approaches to genome assembly</li>
             <li>Read the methods in scientific papers about genome assembly, particularly those about genomes with similar characteristics to those in your project</li>
